--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dotenv": "^16.0.3",
+    "gulp": "^4.0.2",
     "nestjs-paginate": "^4.8.0",
     "pg": "^8.9.0",
     "reflect-metadata": "^0.1.13",
-    "require": "^2.4.20",
     "rxjs": "^7.2.0",
     "sqlite3": "^5.1.4",
     "typeorm": "^0.3.11"
